--- a/andes-backend/package.json
+++ b/andes-backend/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "andes-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mongoose": "^8.6.3"
-  }
+	"name": "andes-backend",
+	"version": "1.0.0",
+	"main": "server.js",
+	"scripts": {
+		"run": "node server.js",
+		"dev": "nodemon server.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.3",
+		"dotenv": "^16.4.5",
+		"express": "^4.21.0",
+		"http-errors": "^2.0.0",
+		"mongoose": "^8.6.3"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.7"
+	}
 }
